# assignment_CI

./: .gitignore  CMakeLists.txt  README.md  assignment_details.puml
.github/workflows/: can_message_pipeline.yaml  file_io_pipeline.yaml  whole_project.yaml
can_message/: CAN_MESSAGE.json  CMakeLists.txt  generate_cpp.py  min_signals.py
can_message/output/include/can_message/: min_signals.h
can_message/output/src/: min_signals.cpp
file_io/: CMakeLists.txt
file_io/app/src/: test.cpp
file_io/lib/include/: file_io.h
file_io/lib/src/: file_io.cpp
file_io/lib/ut/: tests.cpp  ut_lib_tests.cpp
ideas/: ideas.md
main_component/: CMakeLists.txt
main_component/input/: test_cmds.txt
main_component/src/: main.cpp  main_old.cpp
main_component/tests/: input.txt  readme.md  test_mc.py
